# video-prep

./: .gitignore  AGENTS.md  BLOCKS.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
scripts/: dnc_run.py
skills/prep-clips/: SKILL.md
skills/prep-clips/scripts/: video-prep
src/video_prep/: __init__.py  assemble.py  burn.py  cli.py  concat.py  cut.py  cut_filler.py  edit.py  fillers.py  pipeline.py  speedup.py  srt.py  transcribe.py
tests/: test_assemble.py  test_cli.py  test_cut_filler.py  test_edit.py  test_srt.py
